@@ -179,7 +179,7 @@ public class InboundClassBasedTemplateGeneratorTest extends BaseTest {
 
       // then
       assertThat(templates).hasSize(1);
-      var template = templates.getFirst();
+      var template = templates.get(0);
       var property = getPropertyById("messageNameUuid", template);
       assertThat(property).isNotNull();
       assertThat(property.getType()).isEqualTo("Hidden");
@@ -202,7 +202,7 @@ public class InboundClassBasedTemplateGeneratorTest extends BaseTest {
 
       // then
       assertThat(templates).hasSize(1);
-      var template = templates.getFirst();
+      var template = templates.get(0);
       assertThrows(Exception.class, () -> getPropertyById("messageNameUuid", template));
     }
 
@@ -262,7 +262,7 @@ public class InboundClassBasedTemplateGeneratorTest extends BaseTest {
 
       // then
       assertThat(templates).hasSize(1);
-      var template = templates.getFirst();
+      var template = templates.get(0);
       var correlationRequiredProperty = getPropertyById("correlationRequired", template);
       assertThat(correlationRequiredProperty).isNotNull();
       assertThat(correlationRequiredProperty.getType()).isEqualTo("Dropdown");
@@ -311,7 +311,7 @@ public class InboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     // when
     var template =
-        generator.generate(MyConnectorExecutable.MinimallyAnnotated.class, config).getFirst();
+        generator.generate(MyConnectorExecutable.MinimallyAnnotated.class, config).get(0);
 
     var property = getPropertyByLabel("Prop 1", template);
 
@@ -338,7 +338,7 @@ public class InboundClassBasedTemplateGeneratorTest extends BaseTest {
 
       // when
       var template =
-          generator.generate(MyConnectorExecutable.MinimallyAnnotated.class, config).getFirst();
+          generator.generate(MyConnectorExecutable.MinimallyAnnotated.class, config).get(0);
 
       // then
       assertThrows(Exception.class, () -> assertDeduplicationProperties(template));
@@ -361,7 +361,7 @@ public class InboundClassBasedTemplateGeneratorTest extends BaseTest {
 
       // when
       var template =
-          generator.generate(MyConnectorExecutable.MinimallyAnnotated.class, config).getFirst();
+          generator.generate(MyConnectorExecutable.MinimallyAnnotated.class, config).get(0);
 
       // then
       assertDeduplicationProperties(template);
@@ -384,7 +384,7 @@ public class InboundClassBasedTemplateGeneratorTest extends BaseTest {
 
       // when
       var template =
-          generator.generate(MyConnectorExecutable.MinimallyAnnotated.class, config).getFirst();
+          generator.generate(MyConnectorExecutable.MinimallyAnnotated.class, config).get(0);
 
       // then
       assertThrows(Exception.class, () -> assertDeduplicationProperties(template));
@@ -434,7 +434,7 @@ public class InboundClassBasedTemplateGeneratorTest extends BaseTest {
     var template =
         generator
             .generate(MyConnectorExecutable.MinimallyAnnotatedWithExtensionProperties.class)
-            .getFirst();
+            .get(0);
 
     assertThat(template.properties())
         .filteredOn(
