@@ -69,7 +69,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void schemaPresent() {
-      assertThat(generator.generate(MyConnectorFunction.FullyAnnotated.class).getFirst().schema())
+      assertThat(generator.generate(MyConnectorFunction.FullyAnnotated.class).get(0).schema())
           .isEqualTo(
               "https://unpkg.com/@camunda/zeebe-element-templates-json-schema/resources/schema.json");
     }
@@ -77,40 +77,32 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
     @Test
     void elementType_default_isServiceTask() {
       assertThat(
-              generator
-                  .generate(MyConnectorFunction.MinimallyAnnotated.class)
-                  .getFirst()
-                  .elementType())
+              generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0).elementType())
           .isEqualTo(ElementTypeWrapper.from(BpmnType.SERVICE_TASK));
     }
 
     @Test
     void elementType_customizable() {
-      assertThat(
-              generator.generate(MyConnectorFunction.FullyAnnotated.class).getFirst().elementType())
+      assertThat(generator.generate(MyConnectorFunction.FullyAnnotated.class).get(0).elementType())
           .isEqualTo(ElementTypeWrapper.from(BpmnType.SCRIPT_TASK));
     }
 
     @Test
     void appliesTo_default_isTask() {
       assertThat(
-              generator
-                  .generate(MyConnectorFunction.MinimallyAnnotated.class)
-                  .getFirst()
-                  .appliesTo())
+              generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0).appliesTo())
           .isEqualTo(Set.of(BpmnType.TASK.getName()));
     }
 
     @Test
     void appliesTo_customizable() {
-      assertThat(
-              generator.generate(MyConnectorFunction.FullyAnnotated.class).getFirst().appliesTo())
+      assertThat(generator.generate(MyConnectorFunction.FullyAnnotated.class).get(0).appliesTo())
           .isEqualTo(Set.of(BpmnType.SERVICE_TASK.getName()));
     }
 
     @Test
     void elementTemplateAnnotation_canDefineBasicFields() {
-      var template = generator.generate(MyConnectorFunction.FullyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.FullyAnnotated.class).get(0);
       assertThat(template.id()).isEqualTo(MyConnectorFunction.ID);
       assertThat(template.name()).isEqualTo(MyConnectorFunction.NAME);
       assertThat(template.version()).isEqualTo(MyConnectorFunction.VERSION);
@@ -120,7 +112,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void elementTemplateAnnotation_providesCorrectDefaultValues() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       assertThat(template.id()).isEqualTo(MyConnectorFunction.ID);
       assertThat(template.name()).isEqualTo(MyConnectorFunction.NAME);
       assertThat(template.version()).isEqualTo(0);
@@ -130,7 +122,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void resultVariableProperty() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Result variable", template);
       assertThat(property.getType()).isEqualTo("String");
       assertThat(property.getBinding().type()).isEqualTo("zeebe:taskHeader");
@@ -140,9 +132,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
     @Test
     void resultVariablePropertyWithValue() {
       var template =
-          generator
-              .generate(MyConnectorFunction.MinimallyAnnotatedWithResultVariable.class)
-              .getFirst();
+          generator.generate(MyConnectorFunction.MinimallyAnnotatedWithResultVariable.class).get(0);
       var property = getPropertyByLabel("Result variable", template);
       assertThat(property.getType()).isEqualTo("String");
       assertThat(property.getBinding().type()).isEqualTo("zeebe:taskHeader");
@@ -152,7 +142,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void resultExpressionProperty() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Result expression", template);
       assertThat(property.getType()).isEqualTo("Text");
       assertThat(property.getBinding().type()).isEqualTo("zeebe:taskHeader");
@@ -164,7 +154,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
       var template =
           generator
               .generate(MyConnectorFunction.MinimallyAnnotatedWithResultExpression.class)
-              .getFirst();
+              .get(0);
       var property = getPropertyByLabel("Result expression", template);
       assertThat(property.getType()).isEqualTo("Text");
       assertThat(property.getBinding().type()).isEqualTo("zeebe:taskHeader");
@@ -174,7 +164,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void errorExpressionProperty() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Error expression", template);
       assertThat(property.getType()).isEqualTo("Text");
       assertThat(property.getBinding().type()).isEqualTo("zeebe:taskHeader");
@@ -183,7 +173,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void retryBackoffProperty() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Retry backoff", template);
       assertThat(property.getType()).isEqualTo("String");
       assertThat(property.getBinding().type()).isEqualTo("zeebe:taskHeader");
@@ -195,7 +185,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
     @Test
     void retryCountProperty() {
       var templates = generator.generate(MyConnectorFunction.MinimallyAnnotated.class);
-      var property = getPropertyByLabel("Retries", templates.getFirst());
+      var property = getPropertyByLabel("Retries", templates.get(0));
       assertThat(property.getType()).isEqualTo("String");
       assertThat(property.getBinding().type()).isEqualTo("zeebe:taskDefinition");
       assertThat(((ZeebeTaskDefinition) property.getBinding()).property()).isEqualTo("retries");
@@ -207,7 +197,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
     void normalMode_taskDefinitionTypeProperty_hidden() {
       var templates = generator.generate(MyConnectorFunction.MinimallyAnnotated.class);
       var property =
-          templates.getFirst().properties().stream()
+          templates.get(0).properties().stream()
               .filter(p -> "zeebe:taskDefinition".equals(p.getBinding().type()))
               .findFirst()
               .orElseThrow();
@@ -224,7 +214,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
                   MyConnectorFunction.MinimallyAnnotated.class,
                   new GeneratorConfiguration(
                       ConnectorMode.HYBRID, null, null, null, null, Map.of()))
-              .getFirst();
+              .get(0);
       var property = getPropertyById("taskDefinitionType", template);
       assertThat(property.getType()).isEqualTo("String");
       assertThat(property.getGroup()).isEqualTo("taskDefinitionType");
@@ -240,7 +230,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
     @Test
     void singleElementType_hasCorrectNameAndId() {
       // when single element type is defined
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       // then no suffixes are added
       assertThat(template.id()).isEqualTo(MyConnectorFunction.ID);
       assertThat(template.name()).isEqualTo(MyConnectorFunction.NAME);
@@ -412,7 +402,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void notAnnotated_StringProperty_hasCorrectDefaults() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Not annotated string property", template);
 
       assertThat(property).isInstanceOf(StringProperty.class);
@@ -427,7 +417,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void annotated_StringProperty_definedByAnnotation() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyById("annotatedStringProperty", template);
 
       assertThat(property).isInstanceOf(TextProperty.class);
@@ -446,7 +436,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void objectProperty_hasRequiredFeelByDefault() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
 
       var objectProperty = getPropertyByLabel("Object property", template);
       assertThat(objectProperty.getFeel()).isEqualTo(FeelMode.required);
@@ -457,7 +447,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void notAnnotated_EnumProperty_hasCorrectDefaults() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Enum property", template);
 
       assertThat(property).isInstanceOf(DropdownProperty.class);
@@ -473,14 +463,14 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void nested_addsPrefixPathByDefault() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       assertDoesNotThrow(() -> getPropertyById("nestedProperty.nestedA", template));
       assertThrows(Exception.class, () -> getPropertyById("nestedProperty.nestedB", template));
     }
 
     @Test
     void nested_disableAddPrefixPath() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       assertDoesNotThrow(() -> getPropertyById("nestedB", template));
       assertThrows(
           Exception.class, () -> getPropertyById("customPathNestedProperty.nestedB", template));
@@ -488,27 +478,27 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void nested_groupOverride() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyById("nestedPropertyWithGroup.nestedA", template);
       assertThat(property.getGroup()).isEqualTo("customGroup");
     }
 
     @Test
     void nested_groupOverrideWhenChildGroupIsSet() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyById("nestedPropertyWithGroupOverride.nestedB", template);
       assertThat(property.getGroup()).isEqualTo("customGroup");
     }
 
     @Test
     void ignoredProperty() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       assertThat(template.properties()).noneMatch(p -> "ignoredField".equals(p.getId()));
     }
 
     @Test
     void conditionalProperty_valid_equals() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Conditional property equals", template);
 
       assertThat(property.getCondition())
@@ -517,7 +507,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void conditionalProperty_valid_oneOf() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Conditional property one of", template);
 
       assertThat(property.getCondition())
@@ -537,7 +527,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void propertyWithDifferentIdAndBinding_isSupported() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyById("idNotEqualToBinding", template);
 
       assertThat(property.getBinding()).isInstanceOf(ZeebeInput.class);
@@ -547,7 +537,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void nested_conditionIsNotChanged() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("First nested sub type override value", template);
 
       assertThat(property.getCondition()).isInstanceOf(AllMatch.class);
@@ -557,28 +547,28 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void containerType_withManualTypeOverride() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Property with type override", template);
       assertThat(property.getType()).isEqualTo("String");
     }
 
     @Test
     void dateProperty_defaultsToStringType() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Date property", template);
       assertThat(property.getType()).isEqualTo("String");
     }
 
     @Test
     void annotatedProperty_tooltipPresent() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyById("annotatedStringProperty", template);
       assertThat(property.getTooltip()).isEqualTo("tooltip");
     }
 
     @Test
     void booleanProperty() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyById("booleanProperty", template);
       assertThat(property.getType()).isEqualTo("Boolean");
       assertThat(property.getBinding()).isEqualTo(new ZeebeInput("booleanProperty"));
@@ -587,7 +577,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void booleanProperty_dependants() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var dependsOnTrue = getPropertyById("dependsOnBooleanPropertyTrue", template);
       assertThat(dependsOnTrue.getCondition()).isEqualTo(new Equals("booleanProperty", true));
       var dependsOnFalse = getPropertyById("dependsOnBooleanPropertyFalse", template);
@@ -599,7 +589,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
       var template =
           generator
               .generate(MyConnectorFunction.MinimallyAnnotatedWithExtensionProperties.class)
-              .getFirst();
+              .get(0);
 
       assertThat(template.properties())
           .filteredOn(
@@ -632,7 +622,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void nonAnnotated_sealedType_hasCorrectDefaults() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var discriminatorProperty =
           template.properties().stream()
               .filter(p -> "Non annotated sealed type".equals(p.getLabel()))
@@ -686,7 +676,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void annotated_sealedType_followsAnnotations() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var discriminatorProperty =
           template.properties().stream()
               .filter(p -> "Annotated type override".equals(p.getLabel()))
@@ -748,7 +738,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void discriminatorProperty_withCondition() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var discriminatorProperty =
           template.properties().stream()
               .filter(p -> "Conditional discriminator".equals(p.getLabel()))
@@ -771,7 +761,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void propertyGroups_unordered() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       checkPropertyGroups(
           List.of(
               Map.entry("customGroup", "Custom group"),
@@ -788,7 +778,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
     @Test
     void allInPredefinedGroups() {
       var template =
-          generator.generate(MyConnectorFunction.AllPropertiesInPredefinedGroups.class).getFirst();
+          generator.generate(MyConnectorFunction.AllPropertiesInPredefinedGroups.class).get(0);
       checkPropertyGroups(
           List.of(
               Map.entry("predefinedGroup1", "Predefined Group One"),
@@ -804,7 +794,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void propertyGroups_orderedAndLabeledByAnnotation() {
-      var template = generator.generate(MyConnectorFunction.FullyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.FullyAnnotated.class).get(0);
       checkPropertyGroups(
           List.of(
               Map.entry("group2", "Group Two"),
@@ -820,7 +810,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void propertyGroupContents_definedByTemplatePropertyAnnotation() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var group1 =
           template.properties().stream()
               .filter(p -> "group1".equals(p.getGroup()))
@@ -840,7 +830,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
                   MyConnectorFunction.MinimallyAnnotated.class,
                   new GeneratorConfiguration(
                       ConnectorMode.HYBRID, null, null, null, null, Map.of()))
-              .getFirst();
+              .get(0);
       checkPropertyGroups(
           List.of(
               Map.entry("taskDefinitionType", "Task definition type"),
@@ -857,7 +847,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void tooltip_definedByPropertyGroupAnnotation() {
-      var template = generator.generate(MyConnectorFunction.FullyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.FullyAnnotated.class).get(0);
       var group1 =
           template.groups().stream().filter(g -> "group1".equals(g.id())).findFirst().orElseThrow();
       assertThat(group1.tooltip()).isEqualTo("Group One Tooltip");
@@ -869,7 +859,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void openByDefault_definedByPropertyGroupAnnotation() {
-      var template = generator.generate(MyConnectorFunction.FullyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.FullyAnnotated.class).get(0);
       var group1 =
           template.groups().stream().filter(g -> "group1".equals(g.id())).findFirst().orElseThrow();
       assertThat(group1.openByDefault()).isFalse();
@@ -885,7 +875,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void validationPresent_onlyPattern() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Property with pattern", template);
       assertThat(property.getConstraints()).isNotNull();
       assertThat(property.getConstraints().pattern())
@@ -897,14 +887,14 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void validationNotPresent() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Not annotated string property", template);
       assertThat(property.getConstraints()).isNull();
     }
 
     @Test
     void validationPresent_minMaxSize() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Property with min max", template);
       assertThat(property.getConstraints()).isNotNull();
       assertThat(property.getConstraints().minLength()).isEqualTo(1);
@@ -913,7 +903,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void validationPresent_maxSizeOnly() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var property = getPropertyByLabel("Property with max size", template);
       assertThat(property.getConstraints()).isNotNull();
       assertThat(property.getConstraints().minLength()).isNull();
@@ -922,7 +912,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void validationPresent_notEmpty_stringProperty() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var notEmptyProperty = getPropertyByLabel("String property with not empty", template);
       assertThat(notEmptyProperty.getConstraints()).isNotNull();
       assertThat(notEmptyProperty.getConstraints().notEmpty()).isTrue();
@@ -938,7 +928,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void validationPresent_notEmpty_objectProperty() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var notEmptyProperty = getPropertyByLabel("Object property with not null", template);
       assertThat(notEmptyProperty.getConstraints()).isNotNull();
       assertThat(notEmptyProperty.getConstraints().notEmpty()).isTrue();
@@ -948,7 +938,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void validationPresent_Pattern_optional() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var mayBeEmptyOrRegexValidated = getPropertyById("mayBeEmptyOrRegexValidated", template);
       assertThat(mayBeEmptyOrRegexValidated.getConstraints()).isNotNull();
       assertThat(mayBeEmptyOrRegexValidated.getConstraints().notEmpty()).isFalse();
@@ -958,7 +948,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void validationPresent_Pattern_optional_jakarta() {
-      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).getFirst();
+      var template = generator.generate(MyConnectorFunction.MinimallyAnnotated.class).get(0);
       var mayBeEmptyOrRegexValidated =
           getPropertyById("mayBeEmptyOrRegexValidatedJakartaStyle", template);
       assertThat(mayBeEmptyOrRegexValidated.getConstraints()).isNotNull();
@@ -985,7 +975,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
               + Base64.getEncoder().encodeToString(readAllBytes(expectedIconPath));
 
       var template =
-          generator.generate(MyConnectorFunction.MinimallyAnnotatedWithSvgIcon.class).getFirst();
+          generator.generate(MyConnectorFunction.MinimallyAnnotatedWithSvgIcon.class).get(0);
       var icon = template.icon();
 
       assertThat(icon.contents()).isEqualTo(expectedIconString);
@@ -1005,7 +995,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
               + Base64.getEncoder().encodeToString(readAllBytes(expectedIconPath));
 
       var template =
-          generator.generate(MyConnectorFunction.MinimallyAnnotatedWithPngIcon.class).getFirst();
+          generator.generate(MyConnectorFunction.MinimallyAnnotatedWithPngIcon.class).get(0);
       var icon = template.icon();
 
       assertThat(icon.contents()).isEqualTo(expectedIconString);
@@ -1017,7 +1007,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void operationAnnotated() {
-      var template = generator.generate(OperationAnnotatedConnector.class).getFirst();
+      var template = generator.generate(OperationAnnotatedConnector.class).get(0);
       assertThat(template.id()).isNotNull();
       assertThat(template.id()).isEqualTo(OperationAnnotatedConnector.ID);
       assertThat(template.name()).isEqualTo(OperationAnnotatedConnector.NAME);
@@ -1067,7 +1057,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void singleOperationAnnotated() {
-      var template = generator.generate(SingleOperationAnnotatedConnector.class).getFirst();
+      var template = generator.generate(SingleOperationAnnotatedConnector.class).get(0);
       assertThat(template.id()).isNotNull();
       assertThat(template.id()).isEqualTo(SingleOperationAnnotatedConnector.ID);
       assertThat(template.name()).isEqualTo(SingleOperationAnnotatedConnector.NAME);
@@ -1078,8 +1068,7 @@ public class OutboundClassBasedTemplateGeneratorTest extends BaseTest {
 
     @Test
     void operationWithPrimitiveParametersAnnotated() {
-      var template =
-          generator.generate(OperationAnnotatedConnectorWithPrimitiveTypes.class).getFirst();
+      var template = generator.generate(OperationAnnotatedConnectorWithPrimitiveTypes.class).get(0);
       assertThat(template.id()).isNotNull();
 
       NumberProperty propertyA = (NumberProperty) getPropertyById("add:a", template);
